<resources>
    <string name="app_name">Dicoding Event</string>
    <string name="title">Dicoding Events</string>
    <string name="title_home">Home</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_finished">Finished</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_setting">Setting</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="finished_events">Finished Events</string>
    <string name="open_event_link">Open Event Link</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="favorite">favorite</string>
    <string name="daily_reminder">Notification</string>
    <string name="added_to_favorites">Added to favorites</string>
    <string name="removed_from_favorites">Removed from favorites</string>
    <string name="no_link_found">No link found</string>
    <string name="favorite_events">Favorite Events</string>
    <string name="settings">Settings</string>
    <string name="detail_event">Detail Event</string>
</resources>