<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.inoo.dicodingevent.ui.home.HomeFragment"
        android:label="@string/title"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_upcoming"
        android:name="com.inoo.dicodingevent.ui.upcoming.UpcomingFragment"
        android:label="@string/upcoming_events"
        tools:layout="@layout/fragment_upcoming" />

    <fragment
        android:id="@+id/navigation_finished"
        android:name="com.inoo.dicodingevent.ui.finished.FinishedFragment"
        android:label="@string/finished_events"
        tools:layout="@layout/fragment_finished" >
    </fragment>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.inoo.dicodingevent.ui.favorite.FavoriteFragment"
        android:label="@string/favorite_events"
        tools:layout="@layout/fragment_favorite" />


    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.inoo.dicodingevent.ui.setting.SettingFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_setting" />

</navigation>
