<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:scrollbars="none"
    android:layout_marginTop="?attr/actionBarSize"
    tools:context=".ui.detail.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="gone" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp">

            <ImageView
                android:id="@+id/ivDetailEventImageLogo"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/title" />

            <Button
                android:id="@+id/btnFavorite"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="@string/favorite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_margin="16dp"
                android:background="@drawable/ic_unfavorite_black_24dp"
                android:textColor="@android:color/white" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvDetailEventName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/tvDetailEventOwner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            app:drawableStartCompat="@drawable/ic_apartment"
            android:drawablePadding="8dp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/tvDetailEventTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            app:drawableStartCompat="@drawable/ic_calendar"
            android:drawablePadding="8dp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/tvDetailEventQuota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            app:drawableStartCompat="@drawable/ic_group"
            android:drawablePadding="8dp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/tvDetailEventDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:paddingTop="8dp"
            android:paddingBottom="14dp" />

        <Button
            android:id="@+id/btnDetailEventOpenLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_event_link"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp" />

    </LinearLayout>

</ScrollView>
